--- a/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
@@ -137,11 +137,11 @@
                     <td><select id="namavendor" class="form-control"></select></td>
                     <td><input type="text" class="form-control" placeholder="satuan" id="satuan" value="" /></td>
                     <td><input type="text" class="form-control" placeholder="harga" id="harga" value="" /></td>
-                    <td><input type="text" class="form-control" placeholder="stok_prev" id="stok_prev" value="" /></td>
-                    <td><input type="text" class="form-control" placeholder="total_req" id="total_req" value="" /></td>
-                    <td><input type="text" class="form-control" placeholder="total_dist" id="total_dist" value="" /></td>
-                    <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" /></td>
-                    <td><input type="text" class="form-control" placeholder="qty" id="qty" value="" /></td>
+                    <td><input type="text" class="form-control" placeholder="stok_prev" id="stok_prev" value="" disabled/></td>
+                    <td><input type="text" class="form-control" placeholder="total_req" id="total_req" value="" disabled/></td>
+                    <td><input type="text" class="form-control" placeholder="total_dist" id="total_dist" value="" disabled/></td>
+                    <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" disabled/></td>
+                    <td><input type="text" class="form-control" placeholder="qty" id="qty" value="0" disabled/></td>
                     <td><input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" /></td>
                     <td><input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" /></td>
                     <td><input type="text" class="form-control" placeholder="qty_final" id="qty_final" disabled="disabled" /></td>
