--- a/Klinik.Web/Views/GudangPusat/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/GudangPusat/PurchaseRequestList.cshtml
@@ -109,8 +109,7 @@
                     "render": function (data, type, full, meta)
                     {
                          var type = full['approve'] == null ? 'Approve' : 'Print';
-                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseRequestPusat/PrintPurchaseRequestPusat?id=' + full.Id + '">' + type + '</a>';
-                        return '<a class="btn btn-info btn-xs" href="/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
+                        return '<a class="btn btn-info btn-xs" href="/GudangPusat/CreateOrEditPurchaseRequest?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>";
                     }
                 }
 
