--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -47,7 +47,7 @@
     </div>
     <div class="panel-body">
         <div class="scrollTable">
-            <table id="tblPurchaseOrderPusat" class="table color-table success-table">
+            <table id="tblPurchaseRequest" class="table color-table success-table">
                 <caption class="headertable">@Klinik.Resources.UIMessages.PurchaseRequestList</caption>
                 <thead>
                     <tr>
