--- a/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
@@ -78,31 +78,39 @@
                     {
                         foreach (var item in Model.purchaserequestPusatdetailModels)
                         {
-                            <tr>
-                                <td hidden>@item.Id</td>
-                                <td hidden>@item.ProductId</td>
-                                <td hidden>@item.VendorId</td>
-                                <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                                <td><select disabled="disabled"><option>@item.namavendor</option></select></td>
-                                <td><input type="text" class="form-control" value="@item.satuan" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.harga" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.stok_prev" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.total_req" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.total_dist" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.sisa_stok" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_final" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.remark" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.total" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_unit" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_box" disabled="disabled" /></td>
-                                <td>
-                                    <button class="edit-purchaseorderpusatdetail btn btn-success btn-sm" disabled>Edit</button>
-                                    <button class="btn btn-danger btn-sm" disabled>Delete</button>
-                                </td>
-                            </tr>
+                    <tr>
+                        <td hidden>@item.Id</td>
+                        <td hidden>@item.ProductId</td>
+                        <td hidden>@item.VendorId</td>
+                        <td><select disabled="disabled" class="editnamabarang"><option>@item.namabarang</option></select></td>
+                        <td><select disabled="disabled"><option>@item.namavendor</option></select></td>
+                        <td><input type="text" class="form-control" value="@item.satuan" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.harga" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.stok_prev" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.total_req" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.total_dist" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.sisa_stok" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty_final" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.remark" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.total" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty_unit" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty_box" disabled="disabled" /></td>
+                        @if (Model.Validasi == null)
+                        {
+                            <td>
+                                    @if ((GeneralHandler.authorized("EDIT_M_PURCHASEREQUESTPUSAT") == "true"))
+                                    {
+                                        <button class="save-purchaserequestpusatdetail btn btn-success btn-sm" data-url="/GudangPusat/EditPurchaseRequestDetail" style="display:none;">Save</button>
+                                        <button class="edit-purchaserequestpusatdetail btn btn-success btn-sm" disabled>Edit</button>
+                                        <button class="delete-purchaserequestpusatdetail btn btn-danger btn-sm" disabled>Delete</button>
+                                        <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                                    }
+                            </td>
+                        }
+                    </tr>
                         }
                     }
                 </tbody>
@@ -160,11 +168,22 @@
             @if ((GeneralHandler.authorized("ADD_M_PURCHASEREQUESTPUSAT", "EDIT_M_PURCHASEREQUESTPUSAT") == "true"))
             {
                 <button type="submit" class="btn btn-primary savepurchasepusardetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/GudangPusat/CreateOrEditPurchaseRequestPusat" style="display:@(Model != null ? "none" : "inline-block")">@Klinik.Resources.UIMessages.Save</button>
-                <button class="btn btn-primary openallbutton" style="display:@(Model != null ? "inline-block" : "none")">@Klinik.Resources.UIMessages.Edit</button>
+                <button class="btn btn-primary openallbutton" style="display:@(Model != null ? Model.Validasi == null ? "inline-block" : "none":"inline-block")">@Klinik.Resources.UIMessages.Edit</button>
             }
             @if (Model != null && (GeneralHandler.authorized("APPROVE_M_PURCHASEREQUESTPUSAT") == "true"))
             {
-                <button class="btn btn-success" onclick="Approve(@Model.Id)">@Klinik.Resources.UIMessages.Validate</button>
+                if (Model.approve == null)
+                {
+                    <button class="btn btn-success" onclick="Approve(@Model.Id)">@Klinik.Resources.UIMessages.Approve</button>
+                }
+
+            }
+            @if (Model != null && (GeneralHandler.authorized("VALIDATION_M_PURCHASEREQUESTPUSAT") == "true"))
+            {
+                if (Model.approve != null && Model.Validasi == null)
+                {
+                    <button class="btn btn-success" onclick="Validation(@Model.Id)">@Klinik.Resources.UIMessages.Validation</button>
+                }
             }
             @if (Model != null)
             {
@@ -222,6 +241,32 @@
         function ApprovePR(Id) {
         $.ajax({
             url: '/GudangPusat/ApprovePurchaseRequestPusat?id=' + Id,
+            type: 'POST',
+            success: function (result) {
+                if (result.Status) {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
+                    location.reload();
+                    toastr.success(result.Message);
+                }
+                else {
+                    toastr.error(result.Message);
+                }
+            }
+        });
+        }
+
+        var Validation = function (ID) {
+            var r = confirm("@Klinik.Resources.UIMessages.ValidationConfirmation" + ID + " ) ?");
+            if (r == true) {
+           ValisasiPR(ID);
+        }
+        return false;
+        }
+
+        function ValisasiPR(Id) {
+        $.ajax({
+            url: '/GudangPusat/ValidationPurchaseRequestPusat?id=' + Id,
             type: 'POST',
             success: function (result) {
                 if (result.Status) {
