--- a/Klinik.Web/Views/GudangPusat/PurchaseOrderList.cshtml
+++ b/Klinik.Web/Views/GudangPusat/PurchaseOrderList.cshtml
@@ -1,7 +1,6 @@
-﻿@model Klinik.Entities.PurchaseRequestPusat.PurchaseRequestPusatModel
-
+﻿@model Klinik.Entities.PurchaseOrderPusat.PurchaseOrderPusatModel
 @{
-    ViewBag.Title = "DeliveryOrderList";
+    ViewBag.Title = "DeliveryOrderPusatList";
 }
 
 <section class="panel">
@@ -10,17 +9,17 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PurchaseRequestPusatList
+            @Klinik.Resources.UIMessages.PurchaseOrderPusatList
             <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
-            <table id="tbProduct" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <table id="tbPurchaseOrderPusat" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>@Klinik.Resources.UIMessages.IDPR</th>
-                        <th>@Klinik.Resources.UIMessages.PrNumber</th>
+                        <th>@Klinik.Resources.UIMessages.IDPO</th>
+                        <th>@Klinik.Resources.UIMessages.PoNumber</th>
                         <th>Tanggal Po</th>
                         <th>@Klinik.Resources.UIMessages.RequestBy</th>
                         <th>@Klinik.Resources.UIMessages.ApprovedBY</th>
@@ -39,10 +38,10 @@
     $(document).ready(function () {
 
         $('#btnAdd').click(function (e) {
-            window.location.href = "/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat";
+            window.location.href = "/GudangPusat/CreateOrEditPurchaseOrderPusat";
         });
 
-        $('#tbProduct').dataTable({
+        $('#tbPurchaseOrderPusat').dataTable({
             "autoWidth": false,
             "processing": true,
             "serverSide": true,
@@ -50,7 +49,7 @@
             "orderMulti": false,
             "pageLength": 10,
             "ajax": {
-                "url": "/PurchaseRequestPusat/GetPurchaseRequestPusatData",
+                "url": "/GudangPusat/GetPurchaseOrderData",
                 "type": "POST",
                 "datatype": "json"
             },
@@ -100,7 +99,7 @@
 
             "columns": [
                 { "data": "Id", "Id": "Id", "autoWidth": false },
-                { "data": "prnumber", "prnumber": "prnumber", "autoWidth": true },
+                { "data": "ponumber", "ponumber": "ponumber", "autoWidth": true },
                 { "data": "createformat", "createformat": "createformat", "autoWidth": true },
                 { "data": "request_by", "request_by": "request_by", "autoWidth": false },
                 { "data": "approve_by", "approve_by": "approve_by", "autoWidth": true },
@@ -110,8 +109,8 @@
                     "render": function (data, type, full, meta)
                     {
                          var type = full['approve'] == null ? 'Approve' : 'Print';
-                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseRequestPusat/PrintPurchaseRequestPusat?id=' + full.Id + '">' + type + '</a>';
-                        return '<a class="btn btn-info btn-xs" href="/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat?id=' + full.Id + '">' + full.Validasi == null ? @Klinik.Resources.UIMessages.Edit : "View" + '</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
+                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseOrderPusat/PrintPurchaseOrderPusat?id=' + full.Id + '">' + type + '</a>';
+                        return '<a class="btn btn-info btn-xs" href="/PurchaseOrderPusat/CreateOrEditPurchaseOrderPusat?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>";
                     }
                 }
 
@@ -156,7 +155,7 @@
 
         function DeleteDO(Id) {
         $.ajax({
-            url: '/PurchaseRequestPusat/DeletePurchaseRequestPusat?id=' + Id,
+            url: 'PurchaseOrderPusat/DeletePurchaseOrderPusat?id=' + Id,
             type: 'POST',
             success: function (result) {
                 if (result.Status) {
@@ -174,7 +173,7 @@
 
         function ApproveDO(Id) {
         $.ajax({
-            url: '/PurchaseRequestPusat/ApprovePurchaseRequestPusat?id=' + Id,
+            url: '/PurchaseOrderPusat/ApprovePurchaseOrderPusat?id=' + Id,
             type: 'POST',
             success: function (result) {
                 if (result.Status) {
@@ -192,7 +191,7 @@
 
         function PrintDO(Id) {
         $.ajax({
-            url: '/PurchaseRequestPusat/PrintPurchaseRequestPusat?id=' + Id,
+            url: '/PurchaseOrderPusat/PrintPurchaseOrderPusat?id=' + Id,
             type: 'GET',
             success: function (result) {
                 if (result.Status) {
