--- a/Klinik.Web/Views/GudangPusat/DeliveryOrderList.cshtml
+++ b/Klinik.Web/Views/GudangPusat/DeliveryOrderList.cshtml
@@ -1,6 +1,7 @@
-﻿@model Klinik.Entities.PurchaseOrderPusat.PurchaseOrderPusatModel
+﻿@model Klinik.Entities.DeliveryOrderPusat.DeliveryOrderPusatModel
+
 @{
-    ViewBag.Title = "PurchaseOrderPusatList";
+    ViewBag.Title = "DeliveryOrderPusatList";
 }
 
 <section class="panel">
@@ -10,17 +11,16 @@
         </div>
         <h5 class="panel-title">
             @Klinik.Resources.UIMessages.PurchaseOrderPusatList
-            <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
     <div class="panel-body">
         <div style="width:100%; margin:0 auto">
-            <table id="tbPurchaseOrderPusat" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+            <table id="tbDeliveryOrderPusat" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>@Klinik.Resources.UIMessages.IDPO</th>
-                        <th>@Klinik.Resources.UIMessages.PoNumber</th>
-                        <th>Tanggal Po</th>
+                        <th>ID Do</th>
+                        <th>Do Number</th>
+                        <th>Tanggal Do</th>
                         <th>@Klinik.Resources.UIMessages.RequestBy</th>
                         <th>@Klinik.Resources.UIMessages.ApprovedBY</th>
                         <th>@Klinik.Resources.UIMessages.Approve</th>
@@ -37,11 +37,7 @@
     <script type="text/javascript">
     $(document).ready(function () {
 
-        $('#btnAdd').click(function (e) {
-            window.location.href = "/GudangPusat/CreateOrEditPurchaseOrderPusat";
-        });
-
-        $('#tbPurchaseOrderPusat').dataTable({
+        $('#tbDeliveryOrderPusat').dataTable({
             "autoWidth": false,
             "processing": true,
             "serverSide": true,
@@ -49,7 +45,7 @@
             "orderMulti": false,
             "pageLength": 10,
             "ajax": {
-                "url": "/GudangPusat/GetPurchaseOrderData",
+                "url": "/GudangPusat/GetDeliveryOrderData",
                 "type": "POST",
                 "datatype": "json"
             },
@@ -99,7 +95,7 @@
 
             "columns": [
                 { "data": "Id", "Id": "Id", "autoWidth": false },
-                { "data": "ponumber", "ponumber": "ponumber", "autoWidth": true },
+                { "data": "dodate", "dodate": "dodate", "autoWidth": true },
                 { "data": "createformat", "createformat": "createformat", "autoWidth": true },
                 { "data": "request_by", "request_by": "request_by", "autoWidth": false },
                 { "data": "approve_by", "approve_by": "approve_by", "autoWidth": true },
@@ -108,8 +104,6 @@
                 {
                     "render": function (data, type, full, meta)
                     {
-                         var type = full['approve'] == null ? 'Approve' : 'Print';
-                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseOrderPusat/PrintPurchaseOrderPusat?id=' + full.Id + '">' + type + '</a>';
                         return '<a class="btn btn-info btn-xs" href="/GudangPusat/CreateOrEditPurchaseOrder?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>";
                     }
                 }
@@ -137,22 +131,6 @@
         return false;
         }
 
-        var Approve = function (ID) {
-            var r = confirm("@Klinik.Resources.UIMessages.ApproveConfirmation" + ID + " ) ?");
-            if (r == true) {
-            ApproveDO(ID);
-        }
-        return false;
-        }
-
-        var Print = function (ID) {
-            var r = confirm("@Klinik.Resources.UIMessages.ApproveConfirmation" + ID + " ) ?");
-            if (r == true) {
-            PrintDO(ID);
-        }
-        return false;
-        }
-
         function DeleteDO(Id) {
         $.ajax({
             url: 'PurchaseOrderPusat/DeletePurchaseOrderPusat?id=' + Id,
@@ -170,43 +148,6 @@
             }
         });
         }
-
-        function ApproveDO(Id) {
-        $.ajax({
-            url: '/PurchaseOrderPusat/ApprovePurchaseOrderPusat?id=' + Id,
-            type: 'POST',
-            success: function (result) {
-                if (result.Status) {
-                    toastr.options.closeButton = false;
-                    toastr.options.timeOut = 2000;
-                    location.reload();
-                    toastr.success(result.Message);
-                }
-                else {
-                    toastr.error(result.Message);
-                }
-            }
-        });
-        }
-
-        function PrintDO(Id) {
-        $.ajax({
-            url: '/PurchaseOrderPusat/PrintPurchaseOrderPusat?id=' + Id,
-            type: 'GET',
-            success: function (result) {
-                if (result.Status) {
-                    toastr.options.closeButton = false;
-                    toastr.options.timeOut = 2000;
-                    location.reload();
-                    toastr.success(result.Message);
-                }
-                else {
-                    toastr.error(result.Message);
-                }
-            }
-        });
-        }
     </script>
 }
-
 
