--- a/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseOrder.cshtml
@@ -128,56 +128,59 @@
                 </tbody>
                 @if (open)
                 {
-                    <tfoot>
-                        <tr>
-                            <th hidden>Id Obat</th>
-                            <th>Nama Obat</th>
-                            <th>Nama Vendor</th>
-                            <th>Satuan per box</th>
-                            <th>Harga per satuan</th>
-                            <th>Obat sebelum distribusi</th>
-                            <th>Total Request</th>
-                            <th>Total Distribusi</th>
-                            <th>Sisa Warehouse</th>
-                            <th>Qty</th>
-                            <th>Adjusment</th>
-                            <th>Remarks</th>
-                            <th>Qty final</th>
-                            <th>Remarks</th>
-                            <th>Total</th>
-                            <th>Qty Unit</th>
-                            <th>Qty Box</th>
-                            <th>Action</th>
-                        </tr>
-                        <tr id="purchaseorderpusatdetail">
-                            <td hidden><input type="text" hidden id="PurchaseRequestPusatDetailId" /></td>
-                            <td hidden><input type="text" hidden id="ProductId" /></td>
-                            <td hidden><input type="text" hidden id="VendorId" /></td>
-                            <td><select id="namabarang" class="form-control"></select></td>
-                            <td><select id="namavendor" class="form-control"></select></td>
-                            <td><input type="text" class="form-control" placeholder="satuan" id="satuan" value="" /></td>
-                            <td><input type="text" class="form-control" placeholder="harga" id="harga" value="" /></td>
-                            <td><input type="text" class="form-control" placeholder="stok_prev" id="stok_prev" value="" disabled /></td>
-                            <td><input type="text" class="form-control" placeholder="total_req" id="total_req" value="" disabled /></td>
-                            <td><input type="text" class="form-control" placeholder="total_dist" id="total_dist" value="" disabled /></td>
-                            <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" disabled /></td>
-                            <td><input type="text" class="form-control" placeholder="qty" id="qty" value="0" disabled /></td>
-                            <td><input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" /></td>
-                            <td><input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" /></td>
-                            <td><input type="text" class="form-control" placeholder="qty_final" id="qty_final" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" placeholder="remark" id="remark" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" placeholder="total" id="total" value="" disabled /></td>
-                            <td><input type="text" class="form-control" placeholder="qty_unit" id="qty_unit" value="" /></td>
-                            <td><input type="text" class="form-control" placeholder="qty_box" id="qty_box" value="" /></td>
-                            <td><input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" /></td>
-                        </tr>
-                    </tfoot>
+                    if (((GeneralHandler.authorized("EDIT_M_PURCHASEORDERPUSAT") == "true")))
+                    {
+                        <tfoot>
+                            <tr>
+                                <th hidden>Id Obat</th>
+                                <th>Nama Obat</th>
+                                <th>Nama Vendor</th>
+                                <th>Satuan per box</th>
+                                <th>Harga per satuan</th>
+                                <th>Obat sebelum distribusi</th>
+                                <th>Total Request</th>
+                                <th>Total Distribusi</th>
+                                <th>Sisa Warehouse</th>
+                                <th>Qty</th>
+                                <th>Adjusment</th>
+                                <th>Remarks</th>
+                                <th>Qty final</th>
+                                <th>Remarks</th>
+                                <th>Total</th>
+                                <th>Qty Unit</th>
+                                <th>Qty Box</th>
+                                <th>Action</th>
+                            </tr>
+                            <tr id="purchaseorderpusatdetail">
+                                <td hidden><input type="text" hidden id="PurchaseRequestPusatDetailId" /></td>
+                                <td hidden><input type="text" hidden id="ProductId" /></td>
+                                <td hidden><input type="text" hidden id="VendorId" /></td>
+                                <td><select id="namabarang" class="form-control"></select></td>
+                                <td><select id="namavendor" class="form-control"></select></td>
+                                <td><input type="text" class="form-control" placeholder="satuan" id="satuan" value="" /></td>
+                                <td><input type="text" class="form-control" placeholder="harga" id="harga" value="" /></td>
+                                <td><input type="text" class="form-control" placeholder="stok_prev" id="stok_prev" value="" disabled /></td>
+                                <td><input type="text" class="form-control" placeholder="total_req" id="total_req" value="" disabled /></td>
+                                <td><input type="text" class="form-control" placeholder="total_dist" id="total_dist" value="" disabled /></td>
+                                <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" disabled /></td>
+                                <td><input type="text" class="form-control" placeholder="qty" id="qty" value="0" disabled /></td>
+                                <td><input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" /></td>
+                                <td><input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" /></td>
+                                <td><input type="text" class="form-control" placeholder="qty_final" id="qty_final" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" placeholder="remark" id="remark" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" placeholder="total" id="total" value="" disabled /></td>
+                                <td><input type="text" class="form-control" placeholder="qty_unit" id="qty_unit" value="" /></td>
+                                <td><input type="text" class="form-control" placeholder="qty_box" id="qty_box" value="" /></td>
+                                <td><input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" /></td>
+                            </tr>
+                        </tfoot>
+                    }
                 }
-            </table>
+                </table>
         </div>
         <br />
         <footer class="panel-footer">
-            @if ((GeneralHandler.authorized("ADD_M_PURCHASEORDERPUSAT", "EDIT_M_PURCHASEORDERPUSAT") == "true"))
+            @if (((GeneralHandler.authorized("EDIT_M_PURCHASEORDERPUSAT") == "true")))
             {
                 <button type="submit" class="btn btn-primary savepurchasepusardetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/GudangPusat/CreateOrEditPurchaseOrderPusat" style="display:@(Model != null ? "none" : "inline-block")">@Klinik.Resources.UIMessages.Save</button>
                 <button class="btn btn-primary openallbutton" style="display:@(Model != null ? Model.Validasi == null ? "inline-block" : "none":"inline-block")">@Klinik.Resources.UIMessages.Edit</button>
