--- a/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/GudangPusat/CreateOrEditPurchaseRequest.cshtml
@@ -41,7 +41,7 @@
     </div>
     <div class="panel-body">
         <div class="scrollTable">
-            <table id="tblPurchaseOrderPusat" class="table color-table success-table">
+            <table id="tblPurchaseOrderPusat" class="table color-table success-table" style="width:200% !important">
                 <caption class="headertable">@Klinik.Resources.UIMessages.PurchaseRequestPusatList</caption>
                 <thead>
                     <tr>
@@ -49,7 +49,8 @@
                         <th class="caption-table" colspan="4" style="text-align:center">Warehouse</th>
                         <th class="caption-table" colspan="1" style="text-align:center"></th>
                         <th class="caption-table" colspan="2" style="text-align:center">PO</th>
-                        <th class="caption-table" colspan="4" style="text-align:center"></th>
+                        <th class="caption-table" colspan="2" style="text-align:center"></th>
+                        <th class="caption-table" style="text-align:center"></th>
                         <th class="caption-table" colspan="2" style="text-align:center">PO Pembulatan</th>
                     </tr>
                     <tr>
@@ -62,7 +63,7 @@
                         <th>Total Request</th>
                         <th>Total Distribusi</th>
                         <th>Sisa Warehouse</th>
-                        <th>Qty</th>
+                        <th>Qty (By Formula)</th>
                         <th>Adjusment</th>
                         <th>Remarks</th>
                         <th>Qty final</th>
@@ -118,6 +119,9 @@
                 {
                     <tfoot>
                         <tr>
+                            <th class="caption-table headertable" colspan="17" style="text-align:center">Add Row Detail</th>
+                        </tr>
+                        <tr>
                             <th hidden>Id Obat</th>
                             <th>Nama Obat</th>
                             <th>Nama Vendor</th>
@@ -127,7 +131,7 @@
                             <th>Total Request</th>
                             <th>Total Distribusi</th>
                             <th>Sisa Warehouse</th>
-                            <th>Qty</th>
+                            <th>Qty (By Formula</th>
                             <th>Adjusment</th>
                             <th>Remarks</th>
                             <th>Qty final</th>
@@ -141,8 +145,8 @@
                             <td hidden><input type="text" hidden id="PurchaseRequestPusatDetailId" /></td>
                             <td hidden><input type="text" hidden id="ProductId" /></td>
                             <td hidden><input type="text" hidden id="VendorId" /></td>
-                            <td><select id="namabarang" class="form-control"></select></td>
-                            <td><select id="namavendor" class="form-control"></select></td>
+                            <td><select id="namabarang" class="form-control" style="width:160px;"></select></td>
+                            <td><select id="namavendor" class="form-control" style="width:160px;"></select></td>
                             <td><input type="text" class="form-control" placeholder="satuan" id="satuan" value="" /></td>
                             <td><input type="text" class="form-control" placeholder="harga" id="harga" value="" /></td>
                             <td><input type="text" class="form-control" placeholder="stok_prev" id="stok_prev" value="" disabled /></td>
