Finish module Appointment

--- a/Klinik.Web/Views/Home/Index.cshtml
+++ b/Klinik.Web/Views/Home/Index.cshtml
@@ -8,13 +8,13 @@
         <div class="col-lg-3 col-sm-6">
             <div class="plan most-popular">
                 <div class="plan-ribbon-wrapper"></div>
-                <h3>Poli Umum<span>15</span></h3>
-                <a class="btn btn-lg btn-primary" href="/Loket/PoliUmum">Register</a>
+                <h3><a class="btn btn-lg btn-primary" href="/Loket/PoliUmum">Poli Umum</a></h3>
+                @*<a class="btn btn-lg btn-primary" href="/Loket/PoliUmum">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Ahmad / Dr Yuni</li>
                     <li><b>Total Antrian</b> 35</li>
-                </ul>
+                </ul>*@
             </div>
         </div>
         <div class="col-lg-3 col-sm-6">
