--- a/Klinik.Web/Views/Pharmacy/Prescription.cshtml
+++ b/Klinik.Web/Views/Pharmacy/Prescription.cshtml
@@ -6,10 +6,10 @@
 
 @section Styles {
     <style>
-        .form-horizontal {
+        /*.form-horizontal {
             display: flex;
             align-items: center;
-        }
+        }*/
 
         .ui-autocomplete {
             position: absolute;
